feat: add code spell checker

--- a/text_editor/vscode/extensions.json
+++ b/text_editor/vscode/extensions.json
@@ -1,6 +1,8 @@
 {
   "recommendations": [
     "pkief.material-icon-theme", // Material Icon Theme
+    "streetsidesoftware.code-spell-checker", // Code Spell Checker
     "ms-vscode-remote.remote-containers" // Dev Containers
+    
   ]
 }
