feat: playbook.yml内のchezmoi設定のテンプレートパスを修正し、templatesディレクトリを参照するように変更

--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -128,7 +128,7 @@
 
         - name: Generate chezmoi configuration
           template:
-            src: chezmoi.toml.j2
+            src: templates/chezmoi.toml.j2
             dest: "{{ paths.chezmoi_config }}/chezmoi.toml"
             mode: '0644'
           vars:
