feat: playbook.yml内のchezmoi設定のテンプレートパスを修正し、変数pathsを追加

--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -128,11 +128,12 @@
 
         - name: Generate chezmoi configuration
           template:
-            src: templates/chezmoi.toml.j2
+            src: chezmoi.toml.j2
             dest: "{{ paths.chezmoi_config }}/chezmoi.toml"
             mode: '0644'
           vars:
             age_public_key: "{{ age_public_key.stdout.strip() }}"
+            paths: "{{ paths }}"
 
         - name: Check existing repository
           stat:
