fix: playbook.ymlとchezmoi.toml.j2の設定を更新し、brewのプレフィックスやOSに応じた条件式を追加。テンプレート変数の整理を行い、可読性を向上。

--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -141,7 +141,8 @@
             mode: '0644'
           vars:
             age_public_key: "{{ age_public_key.stdout.strip() }}"
-            paths: "{{ paths }}"
+            age_key_file: "{{ paths.age_key }}"
+            brew_prefix: "{{ brew.prefix }}"
 
         - name: Check existing repository
           stat:
