feat: Ansible基本テストワークフローのブランチ設定を更新し、pushおよびpull_requestの対象をmainおよびfeature/*に変更。テスト対象のパスをinfra/**に修正。

--- a/.github/workflows/ansible-basic-test.yml
+++ b/.github/workflows/ansible-basic-test.yml
@@ -2,13 +2,11 @@ name: Ansible Playbook Basic Test
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, feature/*]
     paths:
-      - 'playbook.yml'
-      - 'templates/**'
-      - 'group_vars/**'
+      - 'infra/**'
   pull_request:
-    branches: [main]
+    branches: [main, feature/*]
   workflow_dispatch:
 
 env:
