chore: Ansible基本テストワークフローのブランチ指定を修正し、fix/*ブランチを追加。これにより、修正ブランチからのプッシュおよびプルリクエストもテスト対象となる。

--- a/.github/workflows/ansible-basic-test.yml
+++ b/.github/workflows/ansible-basic-test.yml
@@ -2,11 +2,11 @@ name: Ansible Playbook Basic Test
 
 on:
   push:
-    branches: [main, feature/*]
+    branches: [main, feature/*, fix/*]
     paths:
       - 'infra/**'
   pull_request:
-    branches: [main, feature/*]
+    branches: [main, feature/*, fix/*]
   workflow_dispatch:
 
 env:
