ci: Ansible基本テストワークフローのブランチ指定を修正し、pushイベントでの対象ブランチをmainのみに変更。pull_requestイベントではrefactor/*ブランチを追加し、テスト対象を拡充。

--- a/.github/workflows/ansible-basic-test.yml
+++ b/.github/workflows/ansible-basic-test.yml
@@ -2,11 +2,11 @@ name: Ansible Playbook Basic Test
 
 on:
   push:
-    branches: [main, feature/*, fix/*]
+    branches: [main]
     paths:
       - 'infra/**'
   pull_request:
-    branches: [main, feature/*, fix/*]
+    branches: [main, feature/*, fix/*, refactor/*]
   workflow_dispatch:
 
 env:
