ci: Ansible基本テストワークフローのpull_requestイベントにおける対象ブランチをmainのみに変更。これにより、テスト対象が明確化される。

--- a/.github/workflows/ansible-basic-test.yml
+++ b/.github/workflows/ansible-basic-test.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'infra/**'
   pull_request:
-    branches: [main, feature/*, fix/*, refactor/*]
+    branches: [main]
   workflow_dispatch:
 
 env:
