--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -58,12 +58,36 @@
       changed_when: false
       failed_when: false
 
+    - name: Prepare Homebrew installation directories (Linux)
+      block:
+        - name: Create /home/linuxbrew directory
+          file:
+            path: /home/linuxbrew
+            state: directory
+            mode: '0755'
+            owner: "{{ ansible_user_id }}"
+            group: "{{ ansible_user_id }}"
+          become: yes
+
+        - name: Create /home/linuxbrew/.linuxbrew directory
+          file:
+            path: /home/linuxbrew/.linuxbrew
+            state: directory
+            mode: '0755'
+            owner: "{{ ansible_user_id }}"
+            group: "{{ ansible_user_id }}"
+          become: yes
+      when:
+        - brew_check.rc != 0
+        - ansible_facts.os_family == "Debian"
+
     - name: Install Homebrew
       shell: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-      become: yes
       when: brew_check.rc != 0
       environment:
         NONINTERACTIVE: "1"
+        HOME: "{{ paths.home }}"
+        USER: "{{ ansible_user_id }}"
 
     - name: Install essential system dependencies
       block:
