fix: remove unsupported decode filter from .tool-versions parsing
- 根本原因: Ansibleの古いバージョンで'decode'フィルターが未サポート
- 修正内容: b64decodeフィルターのみ使用（自動UTF-8デコード）
- 影響範囲: .tool-versionsファイルの解析処理のみ
- 検証方法: ansible-playbook実行でタスクが正常完了することを確認

--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -282,7 +282,7 @@
           set_fact:
             asdf_tools: >-
               {{
-                (tool_versions_raw.content | b64decode | decode('utf-8')).splitlines()
+                (tool_versions_raw.content | b64decode).splitlines()
                 | map('trim')
                 | reject('match', '^(#|$)')
                 | map('split')
