--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -285,7 +285,7 @@
                 (tool_versions_raw.content | b64decode).splitlines()
                 | map('trim')
                 | reject('match', '^(#|$)')
-                | map('split')
+                | map(attribute='split')
                 | list
               }}
 
