fix: use regex_findall with capture groups for .tool-versions parsing
- 根本原因: map(attribute='split')がメソッド参照を返しループ処理が失敗
- 修正内容: regex_findall('(\S+)')で各行を空白区切りの配列に正確に分割
- 影響範囲: asdf_tools変数の生成とasdfプラグインインストールタスク
- 検証方法: "Install missing asdf plugins"タスクが正常実行され、item[0]/item[1]アクセスが成功することを確認

--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -285,7 +285,7 @@
                 (tool_versions_raw.content | b64decode).splitlines()
                 | map('trim')
                 | reject('match', '^(#|$)')
-                | map(attribute='split')
+                | map('regex_findall', '(\S+)')
                 | list
               }}
 
