feat: Makefileとスクリプトの修正: ansible-playbookコマンドに`--ask-become-pass`オプションを追加し、実行時のパスワード入力を促すように変更。sample.shの実行権限を755に更新。

--- a/infra/Makefile
+++ b/infra/Makefile
@@ -7,13 +7,13 @@ syntax:
 	ansible-playbook --syntax-check -i $(INVENTORY) playbook.yml
 
 check:
-	ansible-playbook -i $(INVENTORY) playbook.yml --check --diff --vault-password-file $(VAULT_FILE)
+	ansible-playbook -i $(INVENTORY) playbook.yml --check --diff --vault-password-file $(VAULT_FILE) --ask-become-pass
 
 apply:
-	ansible-playbook -i $(INVENTORY) playbook.yml --vault-password-file $(VAULT_FILE)
+	ansible-playbook -i $(INVENTORY) playbook.yml --vault-password-file $(VAULT_FILE) --ask-become-pass
 
 debug:
-	ansible-playbook -i $(INVENTORY) playbook.yml --check --diff -vvv --vault-password-file $(VAULT_FILE)
+	ansible-playbook -i $(INVENTORY) playbook.yml --check --diff -vvv --vault-password-file $(VAULT_FILE) --ask-become-pass
 
 clean:
 	rm -f $(VAULT_FILE)
